Compiler/tests/typing/bad/testfile-field-9.rs

struct S { a: i32, s: S }
fn main() { }
